--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/planets-fact-site",
+            "outputPath": "dist/planets-fact-site/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -95,6 +95,60 @@
           "options": {
             "browserTarget": "planets-fact-site:build"
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/planets-fact-site/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media"
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false,
+              "vendorChunk": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "planets-fact-site:build:development",
+              "serverTarget": "planets-fact-site:server:development"
+            },
+            "production": {
+              "browserTarget": "planets-fact-site:build:production",
+              "serverTarget": "planets-fact-site:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "planets-fact-site:build:production",
+              "serverTarget": "planets-fact-site:server:production"
+            },
+            "development": {
+              "browserTarget": "planets-fact-site:build:development",
+              "serverTarget": "planets-fact-site:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
