--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "dev:ssr": "ng run planets-fact-site:serve-ssr",
+    "serve:ssr": "node dist/planets-fact-site/server/main.js",
+    "build:ssr": "ng build && ng run planets-fact-site:server",
+    "prerender": "ng run planets-fact-site:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/animations": "^15.0.1",
+    "@angular/common": "^15.0.1",
+    "@angular/compiler": "^15.0.1",
+    "@angular/core": "^15.0.1",
+    "@angular/forms": "^15.0.1",
+    "@angular/platform-browser": "^15.0.1",
+    "@angular/platform-browser-dynamic": "^15.0.1",
+    "@angular/platform-server": "^15.0.1",
+    "@angular/router": "^15.0.1",
+    "@nguniversal/express-engine": "^15.0.0",
+    "express": "^4.15.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -24,7 +31,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.1",
+    "@nguniversal/builders": "^15.0.0",
+    "@types/express": "^4.17.0",
+    "@types/node": "^14.15.0",
     "typescript": "~4.8.2"
   }
 }
